[package]
name = "migrate-move"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "migrate-move"
path = "src/migrate_move.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
thiserror = "1.0.37"
